--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.3",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-countdown-timer-hooks": "^1.0.5",
@@ -27,6 +28,7 @@
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.5.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
